update(menu): remove grid-template-row control
fix: grid-row & grid-column on primefaces component
update: build & publish scripts

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -325,7 +325,8 @@ $colors-mapped: map-merge(
 
 @mixin fg-variant($selector, $k, $v) {
   #{$selector} {
-    color: var(--#{$k}, map-get($v, 'bg'));
+    --color: var(--#{$k}, map-get($v, 'bg'));
+    color: var(--color);
   }
 
   #{selector.append('a,button,.link',$selector)} {
