--- a/src/styles/helper/tailwindcss.scss
+++ b/src/styles/helper/tailwindcss.scss
@@ -1,4 +1,4 @@
-.grid>div {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
+// .grid>div {
+//   padding-left: 1rem;
+//   padding-right: 1rem;
+// }
